k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-media
  labels:
    app.kubernetes.io/name: social-media-app
    app.kubernetes.io/part-of: social-media-platform
